--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_anulacion_materias2.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_anulacion_materias2.html.twig
@@ -232,6 +232,11 @@
             
         </script>
 {% endif %}
+{% if (banderaMatricula!=4 )%}
+    <div class="col-lg-12">
+            <b>{{ estudiante }}</b>: Usted no se encuentra matriculado en el ciclo actual 
+    </div>
+{% endif %}
 
             
 
