--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/menu_estudiantes.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/menu_estudiantes.html.twig
@@ -27,7 +27,7 @@
                     </div>
                 </div>
                 <div class="col-lg-12 col-md-6">
-                    <div class="panel panel-yellow">
+                    <div class="panel panel-red">
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-xs-3">
@@ -71,7 +71,7 @@
                 <!-- aqui termina todo -->
 
                 <div class="col-lg-12 col-md-6">
-                    <div class="panel panel-primary">
+                    <div class="panel panel-blue">
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-xs-3">
@@ -92,6 +92,27 @@
                     </div>
                 </div>
 
+                <div class="col-lg-12 col-md-6">
+                    <div class="panel panel-green">
+                        <div class="panel-heading">
+                            <div class="row">
+                                <div class="col-xs-3">
+                                    <i class="fa fa-table fa-5x"></i>
+                                </div>
+                                <div class="col-xs-9 text-right">
+                                    <div><h3>Horarios</h3></div>
+                                </div>
+                            </div>
+                        </div>
+                        <a href="{{path('estudiantes_horarios')}}">
+                            <div class="panel-footer">
+                                <span class="pull-left">Ir a Horarios</span>
+                                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                <div class="clearfix"></div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
 
             </div>
             <div class="panel-footer">
