--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/login.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/login.html.twig
@@ -120,7 +120,7 @@ function login(){
         title       : 'Ingresar',
         iconPath    : '{{ asset('images/menu/')}}',
         icon        : 'ug_logo.png',
-        content     : 'Universidad de Guayaquil',
+        content     : 'Academic Relation Student',
         dialog      : 'form',
         form        : {  content: html, method: 'get'},
         buttons : {
