--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_principal.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_principal.html.twig
@@ -8,7 +8,7 @@
     <!-- mini logo for sidebar mini 50x50 pixels -->
     <span class="logo-mini"><b>UG</b>-A</span>
     <!-- logo for regular state and mobile devices -->
-    <span class="logo-lg"><b>UG </b> Académico</span>
+    <span class="logo-lg"><b>Academic Relation Student</b> </span>
   </a>
   <!-- Header Navbar: style can be found in header.less -->
   <nav class="navbar navbar-static-top" role="navigation">
