--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/admin_listado_anulacion_detalle.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/admin_listado_anulacion_detalle.html.twig
@@ -16,7 +16,7 @@
      
 </style>
 
-<table  align='center' border='1' id="table-listarpago">
+<table  align='center' border='1' id ="Table_Anulacion_Materia">
 <thead>
     <tr>
         <td colspan='6'><div style="background-color: #0B2161; color: white;font-size:15pt ;" align="center">Estudiante: {{NombreEstudiante}}</div></td>
@@ -31,8 +31,9 @@
     {% for listado in inscripcion %}    
          <tr class="odd gradeX">
             <td   align="center"   width='5%' id="materia_{{ listado.descripcion }}">{{ listado.descripcion }}</td>
-            <td   align="center"   width='5%' id="idmatepara_{{ listado.identificador }}">{{ listado.identificador }}</td>
-            <td   align="center"   width='5%' id="idmatepara_{{ listado.identificador }}"><input type="checkbox" name="ord_orden_select" /></td>
+            <td   align="center"   width='5%' >{{ listado.identificador }}</td>
+            <td   align="center"   width='5%' id="idMateria_{{ listado.identificador }}"><input type="checkbox" name="Sel_anula_materia" id="codmateria_{{ listado.identificador }}" /></td>
+            <input type="hidden" id="idSolicitud_{{ listado.id_solicitud_detalle }}" />
          </tr>
     {% endfor %}  
 </tbody>
@@ -40,10 +41,109 @@
                             
                     <tr>
                             <td width='5%' colspan='6' align="right">
-                              <a class="btn btn-success " id='btnlegalorden'>Legalizar</a>
+                              <a class="btn btn-success " id='btnsolanula'>Legalizar</a>
                             </td>
                     </tr>
                
         </tfoot>
 
 </table>
+  <script>
+         $("#btnsolanula").on("click",function(event){
+                $("#btnsolanula").attr("disabled", true);
+                var idSolicitud = "";
+                var IdCurso = "";
+                var idMateria = "";
+                var Materia = "";
+                var idCiclo='{{idCiclo}}';
+                var idCarrera='{{idCarrera}}';
+                var valida = 0;
+                var myArray = {};
+                var elementochk = document.getElementsByName("Sel_anula_materia"); 
+                        $("#Table_Anulacion_Materia tbody tr").each(function (index) 
+                            {
+                               
+                                if (elementochk[index].checked )
+                                {
+                                    valida=valida+1;
+
+                                    $(this).children("td").each(function (index2) 
+                                    {
+                                        Celda=$(this).attr("id");
+                                        Celda=Celda.split('_');
+                                        Celda=Celda[0];
+                                        //alert(Elemento);
+                                        switch (Celda) 
+                                        {
+                                            case "idMateria": idMateria = $(this).text()
+                                                    //alert(idMateria);
+                                                    break;   
+                                            case "idSolicitud": idSolicitud = $(this).text()
+                                                    //alert(idMateria);
+                                                    break;          
+                                        }
+                                         
+                                    })
+                                     
+                                        var arrValores = {};
+                                         arrValores["idSolicitud"]=idSolicitud;
+                                         arrValores["idMateria"]=idMateria;
+                                         arrValores["idCarrera"]=idCarrera;
+                                         arrValores["idCiclo"]=idCiclo;
+                                         myArray[index]=arrValores;
+                                    
+                                }
+                               
+                            })
+                                 var obj_data = {'arrMaterias': myArray,'idCarrera':idCarrera,'idCiclo':idCiclo};
+                                 var jumpAction = '{{path('admin_anulacion_detalle_2')}}';
+                                  $.ajax({
+                                     url:   jumpAction,
+                                     data: obj_data,
+                                     type:  'post',
+                                     async: true,
+                                     beforeSend: function () {
+                              
+                                     },
+                                     success:  function (dataResponse) {
+                                        
+                                       var respuesta=jQuery.parseJSON(dataResponse);
+                                       if (respuesta.codigo_error!=1)
+                                       {
+                                            $("#btnsolanula").attr("disabled", false);
+                                            modelessActualizadOrden2= new $.flavr({
+                                                   modal   : true,
+                                                   content : 'No se ha podido realizar la anulacion',
+                                                   buttons     : {
+                                                      primary : { text: 'Aceptar', 
+                                                      style: 'primary' }
+                                                   }
+                                                });
+                                       }
+                                       else
+                                       {
+                                            $('#btnsolanula').remove();
+                                           modelessActualizadOrden2= new $.flavr({
+                                               modal   : true,
+                                               content : 'Proceso Exitoso',
+                                               buttons     : {
+                                                  primary : { text: 'Aceptar', 
+                                                  style: 'primary' }
+                                               }
+                                            });
+                                       }
+                                     },
+                                      error: function(dataResponse)
+                                      {
+                                        form="accordion";
+                                        msg_alert = alert_bootstrap( form, 'Atenci&oacute;n', "Nos encontramos en mantenimiento de nuestros servidores, por favor intenta nuevamente m&aacute;s tarde.", 'sm', 'alert');
+                                                        $( '#'+form ).append( msg_alert );
+                                                        $('#modal-'+form).modal('show');
+                                      },
+
+                                 dataType:'text'
+                              });
+                            
+
+              });     
+</script>
